# SCTools

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/demultiplex/: demultiplex.cpp  functions.h  settings.h
docs/: CMakeLists.txt  sctools_doxygen_cfg.in
examples/: 01_demultiplex_alignment_file.sh
include/: CMakeLists.txt
include/sctools/: alignments_reader.h  alignments_writer.h  cell_metrics_record.h
tests/: CMakeLists.txt
tests/data/: test_bam.sam
tests/units/: CMakeLists.txt
